[gd_scene load_steps=6 format=2]

[ext_resource path="res://Image/title_image.png" type="Texture" id=1]
[ext_resource path="res://test/hobo.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scene/TextHoverBtn.tscn" type="PackedScene" id=3]
[ext_resource path="res://GDScript/PauseSceneManager.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[node name="PauseScene" type="Node2D"]
visible = false
script = ExtResource( 4 )

[node name="TitleCanvas" type="CanvasLayer" parent="."]
layer = 12

[node name="TitlePanel" type="Node2D" parent="TitleCanvas"]
position = Vector2( 300, 69.4292 )

[node name="Label" type="Label" parent="TitleCanvas/TitlePanel"]
custom_fonts/font = SubResource( 1 )
text = "초보자마을
시뮬레이터"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TitleCanvas/TitlePanel"]
position = Vector2( 391.617, 67.8376 )
scale = Vector2( 1.28967, 1.28659 )
texture = ExtResource( 1 )

[node name="ButtonCanvas" type="CanvasLayer" parent="."]
layer = 12

[node name="Control" type="Control" parent="ButtonCanvas"]
margin_left = 438.585
margin_top = 260.315
margin_right = 438.585
margin_bottom = 260.315
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoTitle" parent="ButtonCanvas/Control" instance=ExtResource( 3 )]
text_btn = "타이틀로"

[node name="Save" parent="ButtonCanvas/Control" instance=ExtResource( 3 )]
margin_top = 55.0
margin_bottom = 110.0
text_btn = "저장하기"

[node name="Settings" parent="ButtonCanvas/Control" instance=ExtResource( 3 )]
margin_top = 110.0
margin_bottom = 165.0
text_btn = "설정"

[node name="Exit" parent="ButtonCanvas/Control" instance=ExtResource( 3 )]
margin_top = 165.0
margin_bottom = 220.0
text_btn = "종료"

[node name="Exit2" parent="ButtonCanvas/Control" instance=ExtResource( 3 )]
margin_top = 220.0
margin_bottom = 275.0
text_btn = "닫기"

[connection signal="pressed" from="ButtonCanvas/Control/GoTitle" to="." method="_on_GoTitle_pressed"]
[connection signal="pressed" from="ButtonCanvas/Control/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ButtonCanvas/Control/Exit2" to="." method="_on_Exit2_pressed"]
